--- a/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "0953b4a2-fb37-4549-b830-608836ae7559",
    "metadata": {},
    "outputs": [
@@ -164,21 +164,21 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Por favor, introduce un número:  6.5\n"
+      "Por favor, introduce un número:  6.4\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Has introducido el número: 6.5\n"
+      "Has introducido el número: 6.4\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Por favor, introduce un número:  -5\n"
+      "Por favor, introduce un número:  -25\n"
      ]
     },
     {
@@ -194,8 +194,7 @@
     "#Write a while loop that keeps asking the user to input numbers\n",
     "#Break the loop if the user enters a negative number\n",
     "while True:\n",
-    "    numero_chr = input(\"Por favor, introduce un número: \") #Se guarda str porque input siempre devuelve en formato cadena de caracteres\n",
-    "    numero = float(numero_chr) #Se convierte al formato float porque alguien puede introducir un decimal\n",
+    "    numero = float(input(\"Por favor, introduce un número: \")) #Se convierte a formato float porque por defecto siempre el input da str\n",
     "    \n",
     "    if numero < 0:\n",
     "        print(\"Se ha introducido un número negativo. El programa ha terminado.\")\n",
@@ -214,21 +213,35 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Por favor, introduce un número:  25\n"
+      "Por favor, introduce un número:  36\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Has introducido el número: 25.0\n"
+      "Has introducido el número: 36.0\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Por favor, introduce un número:  -777\n"
+      "Por favor, introduce un número:  81\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has introducido el número: 81.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  -49\n"
      ]
     },
     {
@@ -237,14 +250,27 @@
      "text": [
       "Número negativo ignorado. Intenta otra vez.\n"
      ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  64\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has introducido el número: 64.0\n"
+     ]
     }
    ],
    "source": [
     "#Re-question: How can you modify the loop so it ignores negative numbers instead of breaking?\n",
     "#Agrego una línea al código\n",
     "while True:\n",
-    "    numero_chr = input(\"Por favor, introduce un número: \") #Se guarda str porque input siempre devuelve en formato cadena de caracteres\n",
-    "    numero = float(numero_chr) #Se convierte al formato float porque alguien puede introducir un decimal\n",
+    "    numero = float(input(\"Por favor, introduce un número: \")) #Se convierte a formato float porque por defecto siempre el input da str\n",
     "\n",
     "    if numero < 0:\n",
     "        print(\"Número negativo ignorado. Intenta otra vez.\")\n",
