--- a/Lecture_3/Assignment_3/group_10_ass_3_2025/Tarea3.ipynb
+++ b/Lecture_3/Assignment_3/group_10_ass_3_2025/Tarea3.ipynb
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2cfa0dd",
+   "id": "14f82a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,16 +385,432 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6"
+    "# 6 Función con múltiples retornos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "466ee2d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "eaec4d59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6.1 Valor máximo\n",
+    "def analyze_numbers(lst):\n",
+    "    return max(lst)\n",
+    "print (analyze_numbers([1,2,3,4,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "07e91eb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6.2 Valor mínimo\n",
+    "def analyze_numbers(lst):\n",
+    "    return min(lst)\n",
+    "print (analyze_numbers([1,2,3,4,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5d606380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6.3 Valor promedio\n",
+    "def analyze_numbers(lst):\n",
+    "    return sum(lst)/len(lst)\n",
+    "print (analyze_numbers([1,2,3,4,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2af76f39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 1 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6.4 Re-question: How would you call this function and unpack the results into three variables?\n",
+    "def analyze_numbers(lst):\n",
+    "    return max(lst), min(lst), sum(lst)/len(lst)\n",
+    "\n",
+    "maximo, minimo, promedio = analyze_numbers([1,2,3,4,5])\n",
+    "print(maximo, minimo, promedio)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "466ee2d4",
+   "id": "a6adc541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Function with Default Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "81bcd418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Daniel!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7.1.a con parámetro\n",
+    "def greet(name, message=\"Hello\"):\n",
+    "    print(f\"{message}, {name}!\")\n",
+    "          \n",
+    "greet(\"Daniel\",\"Hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beeea3fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7.1.b. sin parámetro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ebe45932",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Daniel!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name, message=\"Hello\"):\n",
+    "    print(f\"{message}, {name}!\")\n",
+    "          \n",
+    "greet(\"Daniel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17896719",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "00c60dbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Python decide usar el valor por defecto que se ha asignado en la función, que en este caso es \"Hello\". Si python no encuentra un mensaje que se le haya aplicado, escogerá por defecto el mensaje que se le asignó  en la función.'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 7.2. Como se puede ver en los códigos anteriores, se ha llamado a la función con y sin parámetro.\n",
+    "\"\"\" Python decide usar el valor por defecto que se ha asignado en la función; en este caso es \"Hello\". Si python no encuentra un mensaje que se le haya aplicado, escogerá por defecto el mensaje que se le asignó  en la función.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be54fb5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. Function with Type Hints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c1092738",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a*b\n",
+    "print(multiply(5,6)) #ejemplo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c2ea0846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.1. Test the function with both integers and strings.\n",
+    "\n",
+    "# Integer and integer\n",
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a*b\n",
+    "print(multiply(2,10)) #se obtiene la multiplicación\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74b695ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integer and string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "733f4429",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hihi\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a*b\n",
+    "print(multiply(\"hi\",2)) # se duplica y se anida el valor de \"hi\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "08c3b718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hihi\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a*b\n",
+    "print(multiply(2,\"hi\")) # se duplica y se anida el valor de \"hi\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f19059f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# string and string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "268fa442",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[62], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmultiply\u001b[39m(a: \u001b[38;5;28mint\u001b[39m, b: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m*\u001b[39mb\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(multiply(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhi\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[62], line 2\u001b[0m, in \u001b[0;36mmultiply\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmultiply\u001b[39m(a: \u001b[38;5;28mint\u001b[39m, b: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m*\u001b[39mb\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a*b\n",
+    "print(multiply(\"2\",\"hi\")) #salta error, porque se está tratando de multiplicar dos strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "53e5b170",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 6) (3850664173.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[65], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    print (\"Si se trata de multiplicar dos valores strings salta error, n/\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8.2 Re-question: What happens if you pass strings, and why?\n",
+    "\n",
+    "    # Manteniendo los dos valores como int:\n",
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a*b\n",
+    "print(multiply(\"hi\",\"stop\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "0757625d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[66], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmultiply\u001b[39m(a: \u001b[38;5;28mstr\u001b[39m, b: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m*\u001b[39mb\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(multiply(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhi\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstop\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[66], line 2\u001b[0m, in \u001b[0;36mmultiply\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmultiply\u001b[39m(a: \u001b[38;5;28mstr\u001b[39m, b: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m*\u001b[39mb\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "    # Reemplazando int por str\n",
+    "def multiply(a: str, b: str) -> str:\n",
+    "    return a*b\n",
+    "print(multiply(\"hi\",\"stop\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "186428bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print (\"Si se trata de multiplicar dos valores strings salta error, porque los strings solo se pueden multiplicar con un valor de integer,n\\\n",
+    "como se ha mostrado en los dos chunks anteriores. Para que se repita el string indicada por la cantidad de veces señalada en el integer, n\\\n",
+    "se tiene que multiplicar el integer con el string, como se ha mostrado en los códigos previos.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e7c5b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de95602c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5dc81a14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista"
+   ]
   },
   {
    "cell_type": "code",
