--- a/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f82a03",
+   "id": "d85579cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eaec4d59",
+   "id": "17d17728",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "07e91eb6",
+   "id": "9e68e33d",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5d606380",
+   "id": "c1f3588f",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2af76f39",
+   "id": "30a3d7c8",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6adc541",
+   "id": "2a3975f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "81bcd418",
+   "id": "e6493358",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beeea3fd",
+   "id": "4c3f33b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ebe45932",
+   "id": "dfde5762",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17896719",
+   "id": "2d185afb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "00c60dbf",
+   "id": "1ae56cf8",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be54fb5c",
+   "id": "37bd8d7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c1092738",
+   "id": "f1df6bcb",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c2ea0846",
+   "id": "6cbe8901",
    "metadata": {},
    "outputs": [
     {
@@ -631,17 +631,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b695ae",
+   "id": "ed86cbfc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Integer and string"
+    "# string and integer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "733f4429",
+   "id": "364606e4",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "08c3b718",
+   "id": "f1392a5d",
    "metadata": {},
    "outputs": [
     {
@@ -673,6 +673,7 @@
     }
    ],
    "source": [
+    "# integer and string\n",
     "def multiply(a: int, b: int) -> int:\n",
     "    return a*b\n",
     "print(multiply(2,\"hi\")) # se duplica y se anida el valor de \"hi\""
@@ -681,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f19059f2",
+   "id": "33cce90c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "268fa442",
+   "id": "7ffce9fe",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "53e5b170",
+   "id": "da8c4504",
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "0757625d",
+   "id": "68fd3d07",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +758,7 @@
     }
    ],
    "source": [
-    "    # Reemplazando int por str\n",
+    "    # Reemplazando int por str en a y b:\n",
     "def multiply(a: str, b: str) -> str:\n",
     "    return a*b\n",
     "print(multiply(\"hi\",\"stop\"))"
@@ -766,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "186428bd",
+   "id": "ebb53637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e7c5b2",
+   "id": "03410895",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -786,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de95602c",
+   "id": "292f020c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -794,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5dc81a14",
+   "id": "b0b59406",
    "metadata": {},
    "outputs": [
     {
