--- a/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7c0db975",
    "metadata": {},
    "outputs": [
@@ -125,23 +125,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e88ae783",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número:  1\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ingrese un número: 5\n",
-      "Número ingresado: 5\n",
-      "Ingrese un número: 2\n",
-      "Número ingresado: 2\n",
-      "Ingrese un número: 3\n",
-      "Número ingresado: 3\n",
-      "Ingrese un número: 0\n",
-      "Número ingresado: 0\n",
-      "Ingrese un número: -5\n",
+      "Número ingresado: 1\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número:  -1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Se encontró un número negativo. Fin del programa.\n"
      ]
     }
@@ -166,10 +178,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0429e4b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número ingresado: 1\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número:  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número ingresado: 0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número:  -1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número negativo ignorado.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIngrese un número: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m num \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNúmero negativo ignorado.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1282\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1280\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1281\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_input_request(\n\u001b[0;32m   1283\u001b[0m     \u001b[38;5;28mstr\u001b[39m(prompt),\n\u001b[0;32m   1284\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_ident[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   1285\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_parent(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshell\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m   1286\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m   1287\u001b[0m )\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\ipykernel\\kernelbase.py:1325\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1322\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1323\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1324\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1325\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1326\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1327\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    num = int(input(\"Ingrese un número: \"))\n",
@@ -189,19 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "74a77b3b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingrese un número para dividir 100: 5\n",
-      "100 dividido entre 5.0 es 20.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "while True:\n",
@@ -227,52 +286,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1100527b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingrese un número para calcular su factorial: 33\n",
-      "Paso 1: factorial = 1\n",
-      "Paso 2: factorial = 2\n",
-      "Paso 3: factorial = 6\n",
-      "Paso 4: factorial = 24\n",
-      "Paso 5: factorial = 120\n",
-      "Paso 6: factorial = 720\n",
-      "Paso 7: factorial = 5040\n",
-      "Paso 8: factorial = 40320\n",
-      "Paso 9: factorial = 362880\n",
-      "Paso 10: factorial = 3628800\n",
-      "Paso 11: factorial = 39916800\n",
-      "Paso 12: factorial = 479001600\n",
-      "Paso 13: factorial = 6227020800\n",
-      "Paso 14: factorial = 87178291200\n",
-      "Paso 15: factorial = 1307674368000\n",
-      "Paso 16: factorial = 20922789888000\n",
-      "Paso 17: factorial = 355687428096000\n",
-      "Paso 18: factorial = 6402373705728000\n",
-      "Paso 19: factorial = 121645100408832000\n",
-      "Paso 20: factorial = 2432902008176640000\n",
-      "Paso 21: factorial = 51090942171709440000\n",
-      "Paso 22: factorial = 1124000727777607680000\n",
-      "Paso 23: factorial = 25852016738884976640000\n",
-      "Paso 24: factorial = 620448401733239439360000\n",
-      "Paso 25: factorial = 15511210043330985984000000\n",
-      "Paso 26: factorial = 403291461126605635584000000\n",
-      "Paso 27: factorial = 10888869450418352160768000000\n",
-      "Paso 28: factorial = 304888344611713860501504000000\n",
-      "Paso 29: factorial = 8841761993739701954543616000000\n",
-      "Paso 30: factorial = 265252859812191058636308480000000\n",
-      "Paso 31: factorial = 8222838654177922817725562880000000\n",
-      "Paso 32: factorial = 263130836933693530167218012160000000\n",
-      "Paso 33: factorial = 8683317618811886495518194401280000000\n",
-      "El factorial de 33 es 8683317618811886495518194401280000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "n = int(input(\"Ingrese un número para calcular su factorial: \"))\n",
@@ -289,21 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1a353aad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingrese un número para calcular su factorial (for): 2\n",
-      "Paso 1: factorial = 1\n",
-      "Paso 2: factorial = 2\n",
-      "El factorial de 2 es 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "n = int(input(\"Ingrese un número para calcular su factorial (for): \"))\n",
@@ -317,19 +323,277 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd452a03-c4cb-49a0-a048-8a6dd4b5cb97",
+   "metadata": {},
+   "source": [
+    "## Part 2: Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a09a7994-c4ce-4e6e-b7f3-d540227f6df8",
+   "metadata": {},
+   "source": [
+    "6. Function with Multiple Returns\n",
+    "Write a function analyze_numbers(lst) that takes a list of numbers and returns:\n",
+    "\n",
+    "The maximum value\n",
+    "\n",
+    "The minimum value\n",
+    "\n",
+    "The average value\n",
+    "\n",
+    "Re-question: How would you call this function and unpack the results into three variables?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a18ea31a",
+   "execution_count": 6,
+   "id": "649419c1-21b8-40da-9d28-379d639251df",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def analyze_numbers(lst):\n",
+    "    maxi = max(lst)\n",
+    "    mini = min(lst)\n",
+    "    avg = sum(lst) / len(lst)\n",
+    "    return maxi, mini, avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1ad02e3f-9cda-4a70-95d7-60d86e2ffcab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numlist = [10, 20, 30, 40, 50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3fecbcbb-3ca9-49b1-a044-44db83e960e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 10, 30.0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analyze_numbers(numlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "733f0f2d-4d20-4b1c-900d-4623d6217bd3",
+   "metadata": {},
+   "source": [
+    "Re-question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4e3a8eeb-b766-415b-bea5-80771eac6f23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum value is  50\n",
+      "The minimum value is  10\n",
+      "The average value is  30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxi_val, mini_val, avg_val = analyze_numbers(numlist)\n",
+    "\n",
+    "print(\"The maximum value is \", maxi_val)\n",
+    "print(\"The minimum value is \", mini_val)\n",
+    "print(\"The average value is \", avg_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa2fcfe1-5fb8-429f-853c-976c19f27dfb",
+   "metadata": {},
+   "source": [
+    "7. Function with Default Parameters\n",
+    "Create a function greet(name, message=\"Hello\") that prints a greeting.\n",
+    "\n",
+    "Call the function with and without the message parameter.\n",
+    "Re-question: How does Python decide which value to use for message when it is not provided?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "eccb4884-3b3d-4202-b3cd-e2c1bec6a156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet(name, message=\"Hello\"):\n",
+    "    print(message, name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "559fef51-c595-48c2-9513-7518f3747676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I don't greet you,  Pablo\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet(name=\"Pablo\", message=\"I don't greet you, \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "841e3371-1d4b-4698-af76-a98df8f76806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Mario\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet(name=\"Mario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07bb8fe-9c0b-4f72-872a-83568391d423",
+   "metadata": {},
+   "source": [
+    "Re-question: If a value for the parameter message is not provided when calling the function, then Python will use the default value established in the function. If a value is provided when calling the function, Python will use the provided value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff3ae240-29b0-491e-95d8-1019a3893a56",
+   "metadata": {},
+   "source": [
+    "8. Function with Type Hints\n",
+    "Write a function multiply(a: int, b: int) -> int that returns the product of two integers.\n",
+    "\n",
+    "Test the function with both integers and strings.\n",
+    "Re-question: What happens if you pass strings, and why?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "993dd8ea-911f-44e2-8f17-765d1c7bc829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a*b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "79538cfd-f6f7-4207-8cca-0a78eb350d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply(10,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "05d59270-e2d5-4f48-8f01-00c649d56c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DiezDiez'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply(\"Diez\",2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "56cd5488-f1ef-4d5b-b38e-06096410260b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m multiply(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDiez\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDos\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m, in \u001b[0;36mmultiply\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmultiply\u001b[39m(a: \u001b[38;5;28mint\u001b[39m, b: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m*\u001b[39mb\n",
+      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "multiply(\"Diez\",\"Dos\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "172c7b2a-a155-4883-9ede-74f84ac43446",
+   "metadata": {},
+   "source": [
+    "Re-question: If strings are used as arguments, then:\n",
+    "If one argument is a string and the other and integer, the Python will multiply the string by the number of times the integer indicates. If both arguments are strings, Python will generate an error, as two strings cannot be multiplied."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -341,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
