--- a/Lecture_3/Assignment_3/group_12_ass_3_2025/2025_assigment_3_1y2.ipynb
+++ b/Lecture_3/Assignment_3/group_12_ass_3_2025/2025_assigment_3_1y2.ipynb
@@ -123,8 +123,16 @@
    "id": "0ec8e27c-6bab-4554-99d1-7e7048dedc09",
    "metadata": {},
    "source": [
-    "Hacemos lo contrario. En vez de darle "
+    "Hacemos lo contrario y evadimos el continue, indicándole que solo sea cuando no es \"o\". "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d90417ae-a208-47f9-a53a-d584f81f508d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
