--- a/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_10_ass_3_2025/group_10_assignment3_2025.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c6282aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GROUP 10"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "1ab11d92",
    "metadata": {},
@@ -14,6 +24,14 @@
     "## Use the pass statement when the number is even, and print only the odd numbers.\n",
     "## Re-question: What would happen if you remove the pass statement?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b281d058",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -353,9 +371,37 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "309316de",
+   "metadata": {},
+   "source": [
+    "4. Try-Except Block - Write a loop that asks the user to input a number and divides 100 by that number. (Hecho por Georgina)\n",
+    "* Use a try-except block to handle the case when the user inputs 0 or a non-numeric value.\n",
+    "* Re-question: How would you improve the code to keep asking until a valid input is provided?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a65a76-879d-402e-b09d-1b76f3723eda",
+   "id": "b902395b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ce93be",
+   "metadata": {},
+   "source": [
+    "4. Bloque Try-Except - Escribe un bucle que pida al usuario que introduzca un número y divida 100 por ese número. (Hecho por Georgina)\n",
+    "   * Usa un bloque try-except para manejar el caso cuando el usuario introduce 0 o un valor no numérico.\n",
+    "   * Re-pregunta: ¿Cómo mejorarías el código para seguir preguntando hasta que se proporcione una entrada válida?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b81ceba9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -366,12 +412,59 @@
    "id": "7f44fa91-0a32-47fa-a9f9-63999d6b6f18",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        num = int(input(\"Introduce un número: \"))\n",
+    "        resultado = 100 / num\n",
+    "        print(f\"100 dividido por {num} es {resultado}\")\n",
+    "        break  # Salir del bucle si todo va bien\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Error: No se puede dividir entre cero. Intenta de nuevo.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Error: Eso no es un número válido. Intenta de nuevo.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b904b9fa",
+   "metadata": {},
+   "source": [
+    "5. While Loop Structure - Write a while loop that calculates the factorial of a given number n. (Hecho por Georgina)\n",
+    "\n",
+    "* Print each intermediate step of the factorial calculation.\n",
+    "* Re-question: How would you implement the same factorial calculation using a for loop instead?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3ac7ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(input(\"Enter a number: \"))\n",
+    "factorial = 1\n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    factorial *= i\n",
+    "    print(f\"Step {i}: factorial = {factorial}\")\n",
+    "\n",
+    "print(f\"Factorial of {n} is {factorial}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "230449e3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d462cb58",
+   "id": "87533e52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b858c331",
+   "id": "b0a9d7d8",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "55eeb140",
+   "id": "6787f727",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fe444469",
+   "id": "7b4706b6",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "dd598a79",
+   "id": "3c811fa2",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de1aa3a",
+   "id": "b36ca523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5d5901a5",
+   "id": "9dcf484d",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdc890a",
+   "id": "42a334e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cfce0bab",
+   "id": "16f6fcc7",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e22ac9",
+   "id": "6f2d0d21",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -556,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "946900b1",
+   "id": "a2713190",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f29d356",
+   "id": "3b6d0849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d602f86f",
+   "id": "0be861bb",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "afb521db",
+   "id": "dc57e05b",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96c15109",
+   "id": "10567144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "11a52cce",
+   "id": "8af0f9e8",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "959ad886",
+   "id": "0ee02764",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea50a098",
+   "id": "65734123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "78130319",
+   "id": "221cb5b1",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6f14edd4",
+   "id": "f9723c90",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c7c5e331",
+   "id": "473939f4",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c615f9c",
+   "id": "a0c6defe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4e78a38",
+   "id": "23d736ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -787,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ccf9b7",
+   "id": "2201f65f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -795,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "705e63f3",
+   "id": "7b08ab8f",
    "metadata": {},
    "outputs": [
     {
